@@ -16,6 +16,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
+- dhcpv4 opt 119 DomainSearch
 - dhcpv4 message variants 9-18 added, breaking change for `MessageType`
 - dhcpv4 added DhcpOption for 91/92/93/94/97
 - UnknownOption encode/decode
